--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.1.0",
     "antd": "^5.13.2",
+    "axios": "^1.6.7",
+    "blurhash": "^2.0.5",
     "framer-motion": "^11.0.2",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-slick": "^0.29.0",
-    "react-toastify": "^10.0.3",
+    "react-toastify": "^10.0.4",
     "sass": "^1.69.7",
     "slick-carousel": "^1.8.1"
   },
