--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
 
-VITE_APP_BASE_URL = "http://localhost:5000/api/v1"
+# VITE_APP_BASE_URL = "http://localhost:5000/api/v1"
+VITE_APP_BASE_URL = "https://bict-backend.onrender.com/api/v1"
