--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.4",
     "sass": "^1.69.7",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
