--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "bict-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,31 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.1.0",
-    "antd": "^5.13.2",
-    "axios": "^1.6.7",
+    "@reduxjs/toolkit": "^2.2.5",
+    "antd": "^5.18.0",
+    "axios": "^1.7.2",
     "blurhash": "^2.0.5",
-    "framer-motion": "^11.0.2",
+    "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.2",
-    "react-slick": "^0.29.0",
-    "react-toastify": "^10.0.4",
-    "sass": "^1.69.7",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "sass": "^1.77.4",
     "slick-carousel": "^1.8.1",
-    "sweetalert2": "^11.10.5"
+    "sweetalert2": "^11.11.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "vite": "^5.2.0"
   }
 }
