--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "blurhash": "^2.0.5",
     "framer-motion": "^11.2.10",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-confetti": "^6.1.0",
